fix dhcp service and tablet mode setting
Change-Id: I43359607663cf65676710719cc0f410dc006d2df

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -130,5 +130,10 @@
         <item>30</item>
     </integer-array>
 
+    <!-- toggles weather device is tablet or phone. right now,
+    tablets are know to have soft buttons, but phones have harware
+    buttons. this might change in the future - especially when the
+    honeycomb modifications become available for phones -->
+    <bool name="cm_default_is_tablet">true</bool>
 
 </resources>
